@@ -1,7 +1,9 @@
 package dao;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Repository;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -11,12 +13,17 @@ import java.nio.file.Path;
 public class SimpleDao {
 
     public String findAll() {
+
+
+        File resource = null;
         String jsonString = null;
         try {
-            jsonString = Files.readString(Path.of("src/main/resources/shipments.json"), StandardCharsets.US_ASCII);
+            resource = new ClassPathResource("shipments.json").getFile();
+            jsonString = new String(Files.readAllBytes(resource.toPath()));
         } catch (IOException e) {
             e.printStackTrace();
         }
+
         return jsonString;
 
     }
